--- a/config/_default/config.yaml
+++ b/config/_default/config.yaml
@@ -4,7 +4,7 @@
 # This file is formatted using YAML syntax - learn more at https://learnxinyminutes.com/docs/yaml/
 
 title: Academic # Website name
-baseurl: 'https://academic-demo.netlify.app/' # Website URL
+baseurl: 'https://fulva1230.github.io/resume22/' # Website URL
 copyright: '' # Footer text, e.g. '© {year} Me'
 
 ############################
