--- a/config/_default/params.yaml
+++ b/config/_default/params.yaml
@@ -36,7 +36,7 @@ contact_links:
   - icon: twitter
     icon_pack: fab
     name: DM Me
-    link: 'https://twitter.com/fulva1230'
+    link: 'https://twitter.com/Fulva19'
 
 # Site header
 
