--- a/config/_default/config.yaml
+++ b/config/_default/config.yaml
@@ -4,8 +4,7 @@
 # This file is formatted using YAML syntax - learn more at https://learnxinyminutes.com/docs/yaml/
 
 title: Yun Shuo, Shi # Website name
-baseurl: 'https://fulva1230.github.io/resume22/' # Website URL
-copyright: '' # Footer text, e.g. '© {year} Me'
+baseURL: 'https://fulva1230.github.io/resume22/' # Website URL
 
 ############################
 ## LANGUAGE
@@ -38,7 +37,6 @@ footnotereturnlinkcontents: <sup>^</sup>
 ignoreFiles: [\.ipynb$, .ipynb_checkpoints$, \.Rmd$, \.Rmarkdown$, _cache$]
 permalinks:
   event: '/talk/:slug/'
-  authors: '/author/:slug/'
   tags: '/tag/:slug/'
   categories: '/category/:slug/'
   publication_types: '/publication-type/:slug/'
@@ -68,4 +66,6 @@ related:
     - name: categories
       weight: 70
 security:
+  _merge: deep
+sitemap:
   _merge: deep
