--- a/.github/workflows/hugo-publish.yml
+++ b/.github/workflows/hugo-publish.yml
@@ -13,8 +13,8 @@ jobs:
           persist-credentials: false
           path: ./source
       - run: |
-          wget https://github.com/gohugoio/hugo/releases/download/v0.92.1/hugo_extended_0.92.1_Linux-64bit.deb
-          sudo dpkg -i hugo_extended_0.92.1_Linux-64bit.deb
+          wget https://github.com/gohugoio/hugo/releases/download/v0.111.3/hugo_extended_0.111.3_linux-amd64.deb
+          sudo dpkg -i hugo_extended_0.111.3_linux-amd64.deb
           hugo
           mv public $GITHUB_WORKSPACE/public
         working-directory: ./source
